--- a/package.json
+++ b/package.json
@@ -16,23 +16,10 @@
   "prisma": {
     "schema": "src/prisma/schema.prisma"
   },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/compression": "^1.7.5",
-    "@types/cookie-parser": "^1.4.8",
-    "@types/express": "^5.0.1",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/multer": "^1.4.12",
-    "@types/node": "^22.13.14",
-    "eslint": "^9.23.0",
-    "nodemon": "^3.1.9",
-    "prettier": "^3.5.3",
-    "prisma": "^6.6.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
-  },
   "dependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@prisma/client": "^6.6.0",
+    "ajv": "^8.17.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^2.2.0",
     "compression": "^1.8.0",
@@ -42,10 +29,31 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.9.0",
     "multer": "^1.4.5-lts.2",
+    "openai": "^4.93.0",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.14.1",
+    "punycode": "^2.3.1",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
+    "twilio": "^5.5.2",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.8",
+    "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.13.14",
+    "@types/pdf-parse": "^1.1.5",
+    "eslint": "^9.24.0",
+    "nodemon": "^3.1.9",
+    "prettier": "^3.5.3",
+    "prisma": "^6.6.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   }
 }
