--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.9.0",
     "multer": "^1.4.5-lts.2",
@@ -44,6 +45,7 @@
     "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.1",
+    "@types/html-to-text": "^9.0.4",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.14",
