--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "html-to-text": "^9.0.5",
+    "json5": "^2.2.3",
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.9.0",
     "multer": "^1.4.5-lts.2",
