--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "prisma": {
     "schema": "src/prisma/schema.prisma"
   },
+  "_moduleAliases": {
+    "@": "dist"
+  },
   "dependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@prisma/client": "^6.7.0",
@@ -33,6 +36,7 @@
     "json5": "^2.2.3",
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.9.0",
+    "module-alias": "^2.2.3",
     "multer": "^1.4.5-lts.2",
     "openai": "^4.93.0",
     "pdf-parse": "^1.1.1",
