--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "start": "ts-node src/index.ts",
+    "start": "ts-node -r tsconfig-paths/register ./src/index.ts",
     "build": "tsc",
     "serve": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,9 +15,6 @@
   "description": "",
   "prisma": {
     "schema": "src/prisma/schema.prisma"
-  },
-  "_moduleAliases": {
-    "@": "dist"
   },
   "dependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -36,7 +33,6 @@
     "json5": "^2.2.3",
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.9.0",
-    "module-alias": "^2.2.3",
     "multer": "^1.4.5-lts.2",
     "openai": "^4.93.0",
     "pdf-parse": "^1.1.1",
@@ -61,6 +57,7 @@
     "prettier": "^3.5.3",
     "prisma": "^6.7.0",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.2"
   }
 }
