--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "ajv": "^8.17.1",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
-    "body-parser": "^2.2.0",
     "compression": "^1.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -53,6 +52,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.14",
     "@types/pdf-parse": "^1.1.5",
+    "@types/pdf2html": "^3.1.0",
     "eslint": "^9.24.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.3",
