fix(prisma): use prisma instance

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,11 @@
     "sourceMap": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
-    "strict": true
+    "strict": true,
+    "skipLibCheck": true,
+    "strictFunctionTypes": true,
+    "strictNullChecks": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["src/**/*"]
 }
