--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "schema": "src/prisma/schema.prisma"
   },
   "dependencies": {
-    "@prisma/client": "^6.8.2",
+    "@prisma/client": "^6.9.0",
     "ajv": "^8.17.1",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
@@ -40,6 +40,7 @@
     "punycode": "^2.3.1",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
+    "stripe": "^18.2.1",
     "tsconfig-paths": "^4.2.0",
     "winston": "^3.17.0"
   },
@@ -58,7 +59,7 @@
     "eslint": "^9.24.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.3",
-    "prisma": "^6.8.2",
+    "prisma": "^6.9.0",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.16",
     "typescript": "^5.8.2"
