--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "socket.io": "^4.8.1",
     "stripe": "^18.2.1",
     "tsconfig-paths": "^4.2.0",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
