--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "schema": "src/prisma/schema.prisma"
   },
   "dependencies": {
+    "@dqbd/tiktoken": "^1.0.21",
     "@prisma/client": "^6.10.0",
     "ajv": "^8.17.1",
     "axios": "^1.8.4",
