--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,13 @@
-DATABASE_URL=db_url
-BACKEND_PORT=5000
-AUTH_TOKEN_NAME=token_name
-JWT_SECRET_KEY=jwt_secret
-NODE_ENV=development
-OPENAI_API_KEY=openai_key
+DATABASE_URL
+BACKEND_PORT
+AUTH_TOKEN_NAME
+JWT_SECRET_KEY
+NODE_ENV
+OPENAI_API_KEY
+STRIPE_PREMIUM_PRICE_ID
+STRIPE_BOOSTER_PRICE_ID
+STRIPE_QUALI_CARRIERE_PRICE_ID
+SMTP_HOST
+SMTP_PORT
+SMTP_USER
+SMTP_PASS
