--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@dqbd/tiktoken": "^1.0.21",
-    "@prisma/client": "^6.10.0",
+    "@prisma/client": "^6.10.1",
     "ajv": "^8.17.1",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
@@ -35,6 +35,7 @@
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.9.0",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.3",
     "openai": "^4.93.0",
     "pdf-parse": "^1.1.1",
     "pg": "^8.14.1",
@@ -56,12 +57,13 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.14",
+    "@types/nodemailer": "^6.4.17",
     "@types/pdf-parse": "^1.1.5",
     "@types/pdf2html": "^3.1.0",
     "eslint": "^9.24.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.3",
-    "prisma": "^6.10.0",
+    "prisma": "^6.10.1",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.16",
     "typescript": "^5.8.2"
